--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+
     <!-- Шапка сайта -->
     <header class="header">
       <div class="logo logo_place_header"></div>
@@ -16,10 +17,12 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете
          использовать в своей жизни? <a class="header__link" href="#">Узнать &#8594;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картинка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
+
     <!--Начинается контент страницы-->
     <main class="content">
+
       <!--Секция Description-->
       <section class="description">
         <div class="two-columns">
@@ -35,7 +38,79 @@
           </div>
         </div>
       </section>
+      <section class="techniques">
+        <h2 class="section-title">Техника обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <ul class="cards">
+          <li class="cart__item">
+            <img src="./images/cards-attention.png" class="cards__image" alt="Картинка">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
+          </li>
+          <li class="cart__item">
+            <img src="./images/cards-recall.png" class="cards__image" alt="Картинка">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное - это позволит соеденить разрозненные порции памяти</p>
+          </li>
+          <li class="cart__item">
+            <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга</p>
+          </li>
+          <li class="cart__item">
+            <img src="./images/cards-question.png" class="cards__image" alt="Картинка">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cart__item">
+            <img src="./images/cards-competence.png" class="cards__image" alt="Картинка">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+       <!--Блок Видео-->
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes">
+          <iframe class="video__frame" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__frame" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <!--Блок oakley-->
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+              причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно,
+              что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+               И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
+               ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+
+      </section>
+
+      <!--Секция Фейман-->
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
+      </section>
+
       <!-- Блок с Цифрами-->
+
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <h3 class="section-subtitle">Про учебу и мозг</h3>
@@ -76,60 +151,98 @@
           </li>
         </ul>
       </section>
-      <!--Секция Фейман-->
-      <section class="feynman">
-        <h2 class="faynman__title">Метод Фейнмана</h2>
-        <h3 class="faynman__subtitle">Выучить и не забыть.</h3>
-        <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
+
+      <!--Секция khan-->
+
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote"> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+          Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
+           навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+           <p class="khan__quote-author">Джордж Лукас</p>
+           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+           <div class="khan__book-container">
+             <div class="khan__book-pic"></div>
+             <a class="khan__buy-link" href="#" target="_blank">Купить Книгу &#8594;</a>
+           </div>
+
+
+        </div>
       </section>
+
       <!--Секция Кауфмен-->
       <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__headeing_them_dark">1</h4>
+              <h4 class="table__heading table__heading_them_dark">1</h4>
               <p class="table__text table__text_theme_dark">Выбирете привлекательный проект.</p>
             </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">2</h4>
+             <h4 class="table__heading table__heading_them_dark">2</h4>
              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">3</h4>
+             <h4 class="table__heading table__heading_them_dark">3</h4>
              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">4</h4>
+             <h4 class="table__heading table__heading_them_dark">4</h4>
              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">5</h4>
+             <h4 class="table__heading table__heading_them_dark">5</h4>
              <p class="table__text table__text_theme_dark">Приготовьте все необходимое для занятий.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">6</h4>
+             <h4 class="table__heading table__heading_them_dark">6</h4>
              <p class="table__text table__text_theme_dark">Устраните припятсвия для занятий.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">7</h4>
+             <h4 class="table__heading table__heading_them_dark">7</h4>
              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">8</h4>
+             <h4 class="table__heading table__heading_them_dark">8</h4>
              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">9</h4>
+             <h4 class="table__heading table__heading_them_dark">9</h4>
              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
            </li>
            <li class="table__cell table__cell_theme_dark">
-             <h4 class="table__heading table__headeing_them_dark">10</h4>
+             <h4 class="table__heading table__heading_them_dark">10</h4>
              <p class="table__text table__text_theme_dark">Удиляйте внимание количеству и скорости.</p>
            </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
+
+      <!--resources-->
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип">
+          </a>
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип">
+          </a>
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип">
+          </a>
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип">
+          </a>
+        </div>
+
+      </section>
+
     </main>
     <footer class="footer">
       <div class="footer__columns">
@@ -140,7 +253,7 @@
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <nav>
-            <ul class="footer___column-links">
+            <ul class="footer__column-links">
               <li><a class="footer__column-link" href="#" target="_blank">Главная</a></li>
               <li><a class="footer__column-link" href="#" target="_blank">Концепция</a></li>
               <li><a class="footer__column-link" href="#" target="_blank">Наставники</a></li>
