Вторая проектная рвботы_Первая версия(исправлены названия в card)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -42,27 +42,27 @@
         <h2 class="section-title">Техника обучения</h2>
         <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <ul class="cards">
-          <li class="cart__item">
+          <li class="card__item">
             <img src="./images/cards-attention.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
           </li>
-          <li class="cart__item">
+          <li class="card__item">
             <img src="./images/cards-recall.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное - это позволит соеденить разрозненные порции памяти</p>
           </li>
-          <li class="cart__item">
+          <li class="card__item">
             <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга</p>
           </li>
-          <li class="cart__item">
+          <li class="card__item">
             <img src="./images/cards-question.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
-          <li class="cart__item">
+          <li class="card__item">
             <img src="./images/cards-competence.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
