--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
         <h2 class="section-title">Техника обучения</h2>
         <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <ul class="cards">
-          <li class="card__item">
+          <li class="cards__item">
             <img src="./images/cards-attention.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
           </li>
-          <li class="card__item">
+          <li class="cards__item">
             <img src="./images/cards-recall.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное - это позволит соеденить разрозненные порции памяти</p>
           </li>
-          <li class="card__item">
+          <li class="cards__item">
             <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга</p>
           </li>
-          <li class="card__item">
+          <li class="cards__item">
             <img src="./images/cards-question.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
-          <li class="card__item">
+          <li class="cards__item">
             <img src="./images/cards-competence.png" class="cards__image" alt="Картинка">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
