Вторая проектная рвботы_Первая версия(исправлены названия в footer)

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav>
-            <ul class="footer___column-links">
+            <ul class="footer__column-links">
               <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">Facebook</a></li>
               <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Facebook">ВКонтакте</a></li>
               <li><a class="footer__column-link" href="#" target="_blank"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Facebook">Instagram</a></li>
