--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете
          использовать в своей жизни? <a class="header__link" href="#">Узнать &#8594;</a></p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Картинка">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный школьник с собакой и его семьей">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -43,27 +43,27 @@
         <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <ul class="cards">
           <li class="cards__item">
-            <img src="./images/cards-attention.png" class="cards__image" alt="Картинка">
+            <img src="./images/cards-attention.png" class="cards__image" alt="Книга">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-recall.png" class="cards__image" alt="Картинка">
+            <img src="./images/cards-recall.png" class="cards__image" alt="Скульптура">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное - это позволит соеденить разрозненные порции памяти</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка">
+            <img src="./images/cards-interliving.png" class="cards__image" alt="Большой холл">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-question.png" class="cards__image" alt="Картинка">
+            <img src="./images/cards-question.png" class="cards__image" alt="Помещение с множеством окон">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-competence.png" class="cards__image" alt="Картинка">
+            <img src="./images/cards-competence.png" class="cards__image" alt="Стопка книг">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.
             </p>
@@ -77,10 +77,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__frame" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__frame" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__frame" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+          <iframe class="video__frame" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
         </div>
       </section>
 
@@ -164,7 +162,9 @@
            <p class="khan__quote-author">Джордж Лукас</p>
            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
            <div class="khan__book-container">
-             <div class="khan__book-pic"></div>
+             <div class="khan__book-pic">
+               <img src="./images/khan-book.jpg" alt="Обложка книни 'Весь мир - школа'" width="100%">
+             </div>
              <a class="khan__buy-link" href="#" target="_blank">Купить Книгу &#8594;</a>
            </div>
 
@@ -228,16 +228,16 @@
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип ресурса Arzamas">
           </a>
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип ресурса N1">
           </a>
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип ресурса Strelka">
           </a>
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип ресурса ПОЛКА">
           </a>
         </div>
 
