Вторая проектная работа_исправлены замечания_ревьвера1

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
            <div class="khan__book-container">
              <div class="khan__book-pic">
-               <img src="./images/khan-book.jpg" alt="Обложка книни 'Весь мир - школа'" width="100%">
+               <img src="./images/khan-book.jpg" alt="Обложка книни 'Весь мир - школа'">
              </div>
              <a class="khan__buy-link" href="#" target="_blank">Купить Книгу &#8594;</a>
            </div>
